--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="contact_us.html">Contact Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="asistant.html">Asistant</a>
+                <a class="nav-link" href="asistant.html">Chatbot</a>
             </li>
       </nav>
 
